k8s/ingress/ingress-nginx2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx   #需要添加已存在的ingressclasses
  rules:
    - host: ingresstest.com   #指定域名
      http:
        paths:
          - path: /testpath
            pathType: Prefix
            backend:
              service:
                name: service-clusterip-test3
                port:
                  number: 80
