k8s/ingress/ingress-nginx3.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-canary   #设置ing名称
  namespace: blog   #如果制定了名称空间，那么绑定的service必须在该名称空间下，否则无法访问
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx   #需要添加已存在的ingressclasses
  rules:
    - host: ingresstest.com   #指定域名
      http:
        paths:
          - path: /test1
            pathType: Prefix
            backend:
              service:
                name: canary-service-v1   #指向service服务并且该service在blog名称空间下
                port:
                  number: 80   #service内部暴露的端口
          - path: /test2
            pathType: Prefix
            backend:
              service:
                name: service-nginx   #指向service服务并且该service在blog名称空间下
                port:
                  number: 80   #service内部暴露的端口
