k8s/ingress/ingress-nginx4.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-canary2   #设置ing名称
  namespace: blog   #如果制定了名称空间，那么绑定的service必须在该名称空间下，否则无法访问
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx   #需要添加已存在的ingressclasses
  defaultBackend:   #如果没有匹配的rules规则，那么默认指向defaultBackend配置的service
    service:
      name: service-nginx
      port:
        number: 80
  rules:
    - host: ingresstest.com   #指定域名
      http:
        paths:
          - path: /test3
            pathType: Prefix
            backend:
              service:
                name: canary-service-v1   #指向service服务并且该service在blog名称空间下
                port:
                  number: 80   #service内部暴露的端口
